# Simple-C-game

./: CMakeLists.txt
include/: Character.h  CharacterBase.h  ConcreteStates.h  Enemy.h  Player.h  Prop.h  StateMachine.h  a_star.h  newCharacterbase.h  newEnemy.h
source/: Character.cpp  CharacterBase.cpp  ConcreteStates.cpp  Enemy.cpp  Player.cpp  Prop.cpp  a_star.cpp  main.cpp  newCharacterBase.cpp  newEnemy.cpp  newMain.cpp
